<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

            <TextView
                    android:id="@+id/txt_name"
                    style="@style/TextViewStyle"></TextView>

                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip">

                    <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lessThanOrEqualToTwoMonths" />

                    <EditText
                            android:id="@+id/lessThanOrEqualToTwoMonths"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                </TableRow>

                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip">

                    <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/threeToTwelveMonths" />

                    <EditText
                            android:id="@+id/threeToTwelveMonths"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                </TableRow>

                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip">

                    <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/thirteenToTwentyFour" />

                    <EditText
                            android:id="@+id/thirteenToTwentyFour"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:inputType="number" />

                </TableRow>

                <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dip">

                    <TextView
                            style="@style/TextViewInputStyle"
                            android:text="Total" />

                    <TextView
                            android:id="@+id/total"
                            style="@style/TextViewInputStyle"
                            android:text="Total" />

                </TableRow>
                <Button
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Save" />

            </TableLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
